WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130673
Text autosizing does not determine line count correctly for simple line layout
https://bugs.webkit.org/show_bug.cgi?id=130673
Summary
Text autosizing does not determine line count correctly for simple line layout
Antti Koivisto
Reported
2014-03-24 09:09:12 PDT
Nope
Attachments
patch
(5.19 KB, patch)
2014-03-24 09:12 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
better patch
(5.42 KB, patch)
2014-03-24 09:21 PDT
,
Antti Koivisto
dbates
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-03-24 09:12:26 PDT
Created
attachment 227651
[details]
patch
Antti Koivisto
Comment 2
2014-03-24 09:13:00 PDT
<
rdar://problem/15965114
>
WebKit Commit Bot
Comment 3
2014-03-24 09:14:59 PDT
Attachment 227651
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 4
2014-03-24 09:21:15 PDT
Created
attachment 227655
[details]
better patch
Daniel Bates
Comment 5
2014-03-24 09:24:11 PDT
Comment on
attachment 227655
[details]
better patch View in context:
https://bugs.webkit.org/attachment.cgi?id=227655&action=review
> Source/WebCore/ChangeLog:8 > + We don't count lines correctly in simple line layout case.
I'm unclear if we have DRT for iOS working. It would be great if we could write a test for this.
Antti Koivisto
Comment 6
2014-03-24 09:31:53 PDT
https://trac.webkit.org/r166171
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug